Fixed annoying extra space on bottom of page

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,6 +14,18 @@ body, a {
   @apply .text-default;
 }
 
-container {
-  max-width: 980px;
+html, body {
+  height: 100%;
+}
+
+#app {
+  height: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.container {
+  //max-width: 980px;
+  flex: 1;
 }
